# sysfetch

./: Cargo.toml  README.md  flake.nix
nix/: buildPackage.nix  devShell.nix
src/: lib.rs  main.rs
src/core/: display.rs  mod.rs  system.rs  theme.rs
src/modules/: compositor.rs  cpu.rs  datetime.rs  disk.rs  drivers.rs  gpu.rs  kernel.rs  media.rs  memory.rs  mod.rs  network.rs  os.rs  packages.rs  shell.rs  terminal.rs  uptime.rs
src/output/: color.rs  mod.rs  text.rs
src/utils/: cache.rs  exec.rs  format.rs  mod.rs
