[package]
name = "sysfetch"
version = "0.1.0"
edition = "2021"
authors = ["System Fetch Team"]
description = "A fast, modular system information fetcher"
license = "MIT"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.28"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
atty = "0.2"

rayon-core = "=1.12.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.4"
mach2 = "0.4"
iconv = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15"
udev = "0.8"
